# AriaType

./: .gitignore  AGENTS.md  CHANGELOG.md  README-cn.md  README-es.md  README-ja.md  README-ko.md  README.md  TRADEMARK.md  TRADEMARK.zh-CN.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  voice-input-products-comparison.md
apps/desktop/src-tauri/: CONTRIBUTING.md  Cargo.toml  Info.plist  build.rs  cargo  entitlements.plist  tauri.conf.json  tauri.dev.conf.json  tauri.e2e.conf.json  tauri.macos.conf.json  tauri.macos.unsigned.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/docs/: polish_engine_test_summary.md  polish_engine_test_verification.md  polish_engine_tests.md  polish_prompt_optimization.md  polish_prompt_quality_test.md  text_injection_fix.md
apps/desktop/src-tauri/examples/: generate_beeps.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/desktop/src-tauri/src/audio/: beep.rs  beep_generator.rs  level_meter.rs  mod.rs  processor.rs  recorder.rs  resampler.rs  stream_processor.rs  wav_writer.rs
apps/desktop/src-tauri/src/commands/: audio.rs  hotkey.rs  mod.rs  model.rs  model_cache.rs  settings.rs  system.rs  text.rs  window.rs
apps/desktop/src-tauri/src/correction_learning/: commands.rs  diff.rs  mod.rs  observer.rs  platform.rs  storage.rs  types.rs
apps/desktop/src-tauri/src/events/: mod.rs
apps/desktop/src-tauri/src/history/: commands.rs  mod.rs  models.rs  store.rs
apps/desktop/src-tauri/src/permissions/: macos.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/polish_engine/: common.rs  mod.rs  templates.rs  traits.rs  unified_manager.rs
apps/desktop/src-tauri/src/runtime_context/: window.rs
apps/desktop/src-tauri/src/sensors/: mod.rs  window_context.rs
apps/desktop/src-tauri/tests/: audio_processor_test.rs  beep_test.rs  cloud_polish_mock_test.rs  cloud_provider_api_test.rs  cloud_stt_engine_test.rs  cloud_stt_migration_test.rs  cloud_stt_streaming_lifecycle_test.rs  cloud_stt_test.rs  downloader_test.rs  e2e_test.rs  error_handling_test.rs  history_retry_test.rs  level_meter_test.rs  lfm_engine_test.rs  manager_test.rs  pipeline_integration_test.rs  polish_engine_test.rs  polish_prompt_quality_test.rs  processor_test.rs  qwen_engine_test.rs  recorder_test.rs  resampler_test.rs  sensevoice_engine_test.rs  unified_manager_comprehensive_test.rs  volcengine_streaming_mock_test.rs  volcengine_streaming_test.rs  whisper_engine_test.rs
context/: README.md
(+409 files in other folders)
