[package]
name = "ariatype"
version = "0.3.7"
description = "AriaType - Voice to Text Application"
authors = ["AriaType Team"]
edition = "2021"
license = "AGPL-3.0-only"
default-run = "ariatype"

[lib]
name = "ariatype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-aptabase = "1.0.0"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
hound = "3.5"
rodio = "0.19"
rubato = "0.15"
nnnoiseless = "0.5"
sherpa-onnx = "1.12"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
log = "0.4"
once_cell = "1.20"
parking_lot = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
llama-cpp-2 = "0.1.138"
llama-cpp-sys-2 = "0.1.138"
async-trait = "0.1.89"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
base64 = "0.22"
rusqlite = { version = "0.34", features = ["bundled"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
enigo = { version = "0.6", default-features = false }
block = "0.1"
tauri = { version = "2", features = ["devtools", "macos-private-api", "tray-icon"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
cocoa = "0.26"
objc = "0.2"
unicode-segmentation = "1"
# CGEventTap dependencies for FN emoji blocker
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = { version = "0.6", default-features = false }
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "processthreadsapi"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.1"

[profile.release]
panic = "unwind"
codegen-units = 16
lto = "thin"
opt-level = "z"
strip = false
